# hazel2

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  TODO  acknowledgements.html  allen.mod  api.html  build_wheels.sh  changelog.html  config.html  coverage.lcov  deploy_testpypi  disclaimer.html  examples.html  files.txt  genindex.html  graphical.html  index.html  io.mod  io_files.html  maths.mod  objects.inv  output.h5  preparation.html  py-modindex.html  pyhazelmod.mod  pyproject.toml  rt_coef.mod  search.html  searchindex.js  see.mod  setup.py  setup_old.py  singleton.mod  sirmod.mod  started.html  state.pickle  svd.mod  (+2 more)
_sources/: acknowledgements.rst.txt  api.rst.txt  changelog.rst.txt  config.rst.txt  disclaimer.rst.txt  index.rst.txt  started.rst.txt
_static/: documentation_options.js
apptainer/: hazel.def  upload
config/: configuration.html  examples.html  regularization.html  topology.html
data/: LINEAS
docs/: Makefile  acknowledgment.rst  api.rst  basic.rst  changelog.rst  compile  conf.py  config.rst  configuration.rst  deploy_docs.sh  examples.rst  graphical.rst  hazel_name  index.rst  input.rst  inputOutput.rst  installation.rst  inversion.rst  io_files.rst  main.tex  make.bat  manual.tex  output.rst  photospheric.rst  preparation.rst  prepareData.rst  programmatically.rst  started.rst  synthesis.rst  topology.rst
examples/: .conf_single.ini.swp  README.md  check_boundary.py  conf.ini  conf_mpi_invh5.ini  conf_mpi_synh5.ini  conf_nonmpi_inv1d.ini  conf_single.ini  conf_syn.ini  example_algorithm.py  example_coordinates.py  gen_h5.py  (+20 more)
(+546 files in other folders)
