[build-system]
requires = ["setuptools==68.2.2", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "hazel"
version = "2018.9.22"
authors = [
  { name="A. Asensio Ramos", email="andres.asensio@iac.es" },
]
description = "Hazel synthesis and inversion code"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python',
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: Implementation :: CPython",
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
]
dynamic = ["license", "keywords", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/aasensio/hazel2"
"Bug Tracker" = "https://github.com/aasensio/hazel2/issues"
